re PR tree-optimization/40062 (high memory usage and compile time in SCEV cprop with -O3)

2009-05-08  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40062
	* tree-scalar-evolution.c (follow_ssa_edge_in_condition_phi):
	Avoid exponential behavior.

From-SVN: r147284